@@ -41,6 +41,8 @@ Bugs fixed
   Closes :issue:`370` and :issue:`374`.
 - Fixed a bug that caused the silent truncation of unicode attributes
   containing the '\0' character. Closes :issue:`371'.
+- Fixed :func:`descr_from_dtype` to work as expected with complex types.
+  Closes :issue:`381`.
 
 
 Changes from 3.1.0 to 3.1.1
